# tersa.app

./: .editorconfig  .gitattributes  .gitignore  .review_head  .sol_review_brief.md  .sol_review_out.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  _typos.toml  about-bridge.toml  about-dioxus.toml  about-mime.toml  about-search.toml  about-sqlcipher.toml  about.toml  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/gmail-rest-macos/: Cargo.toml
adapters/gmail-rest-macos/src/: lib.rs
adapters/keychain-macos/: Cargo.toml
adapters/keychain-macos/src/: lib.rs  mailbox_read.rs  oauth_token.rs
adapters/oauth-sync-macos/: Cargo.toml
adapters/oauth-sync-macos/src/: lib.rs  permit.rs  worker.rs
adapters/store-sqlcipher-macos/: Cargo.toml
adapters/store-sqlcipher-macos/migrations/: 0001_account_mailbox.sql
adapters/store-sqlcipher-macos/src/: lib.rs
apple/: README.md  local.xcconfig.example  project.yml
apple/ios/: AppDelegate.swift  Info.plist  OAuthAuthorizationSession.swift  TersaIOS-Bridging-Header.h  TersaRustBridge.h
apple/licenses/: THIRD_PARTY_NOTICES-blob-ios.txt  THIRD_PARTY_NOTICES-blob-macos.txt  THIRD_PARTY_NOTICES-bridge-ios.txt  THIRD_PARTY_NOTICES-bridge-macos.txt  THIRD_PARTY_NOTICES-dioxus-ios.txt  THIRD_PARTY_NOTICES-dioxus-macos.txt  THIRD_PARTY_NOTICES-ios.txt  THIRD_PARTY_NOTICES-macos.txt  THIRD_PARTY_NOTICES-mime-ios.txt  THIRD_PARTY_NOTICES-mime-macos.txt  THIRD_PARTY_NOTICES-search-ios.txt  THIRD_PARTY_NOTICES-search-macos.txt  THIRD_PARTY_NOTICES-sqlcipher-ios.txt  THIRD_PARTY_NOTICES-sqlcipher-macos.txt  THIRD_PARTY_NOTICES.txt  rust-skia-notices.txt  sqlcipher-notices.txt
apple/macos/: AccountConnectionView.swift  AccountConnectionViewModel.swift  AppDelegate.swift  BootstrapWorker.swift  ComposerView.swift  ConnectionState.swift  InboxEmptyStateView.swift  InboxView.swift  Info.plist  MailboxDocuments.swift  MailboxMessageRow.swift  MailboxReadState.swift  MailboxReadWorker.swift  MainMenu.swift  OAuthAuthorizationSession.swift  RootView.swift  SearchView.swift  TersaMac.entitlements  TersaRustBridge.h  ThreadView.swift
apple/mime-common/: MimeHostileContentPolicy.swift  sanitized.html
apple/mime-ios/: AppDelegate.swift
apple/mime-macos/: AppDelegate.swift  Info.plist
apple/rust-bridge/: Cargo.toml
apple/rust-bridge/examples/: oauth_entitlement_probe.rs
apple/rust-bridge/src/: lib.rs  mailbox.rs  oauth.rs
apple/scripts/: build-dioxus-executable.sh  build-rust-staticlib.sh  build-slint-executable.sh  capture-dioxus-device-evidence.sh  capture-dioxus-evidence.sh  capture-macos-ui-dev-evidence.sh  capture-slint-evidence.sh  find-process-window.swift  generate-project.sh  generate-third-party-notices.sh  mime-canary.py  prepare-verified-skia.sh  render-third-party-notices.py  verify-blob-feasibility.sh  verify-dioxus-device-evidence.py  verify-dioxus-runtime.py  verify-dioxus-vendor.py  verify-mime-feasibility.sh  verify-oauth-feasibility.sh  verify-rust-skia-notices.py  verify-search-feasibility.sh  verify-sqlcipher-feasibility.sh  verify-sqlcipher-notices.py
apps/blob-spike/: Cargo.toml
apps/blob-spike/src/: diagnostic.rs  format.rs  main.rs
apps/cli-macos/: Cargo.toml
apps/cli-macos/src/: lib.rs  main.rs
apps/dioxus-spike/: Cargo.toml
apps/dioxus-spike/src/: main.rs  style.css
apps/mime-spike/: Cargo.toml
apps/mime-spike/src/: lib.rs  main.rs
apps/search-spike/: Cargo.toml
apps/search-spike/src/: diagnostic.rs  directory.rs  main.rs
apps/slint-spike/: Cargo.toml  build.rs
apps/slint-spike/src/: main.rs
apps/slint-spike/ui/: tersa.slint
apps/sqlcipher-spike/: Cargo.toml
apps/sqlcipher-spike/migrations/account/: 0001_mail_cache.sql  0002_pending_operations.sql
apps/sqlcipher-spike/migrations/global/: 0001_initial.sql  0002_preferences.sql
apps/sqlcipher-spike/src/: main.rs  migrations.rs
crates/application/: Cargo.toml
crates/application/src/: identity.rs  lib.rs  mailbox.rs  mailbox_metadata.rs  mailbox_search.rs  oauth.rs  sync.rs  token.rs
crates/domain/: Cargo.toml
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  secure_storage.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: lib.rs  mailbox.rs
docs/: development.md  roadmap.md
docs/architecture/: adr-0004-slint-binary-license.md  adr-0005-dioxus-diagnostic-runtime.md  adr-0006-product-constraints.md  adr-0007-dioxus-local-ephemeral-fork.md  adr-0008-dioxus-release-diagnostic.md  adr-0009-dioxus-sandboxed-transport-diagnostic.md  adr-0010-dioxus-sandboxed-navigation-classification.md  adr-0011-sqlcipher-schema-and-migration-ownership.md  adr-0012-chunked-blob-format.md  adr-0013-macos-first-phasing.md  adr-0014-macos-production-dependency-boundaries.md  adr-0015-mailbox-contract-seam.md  adr-0016-gmail-rest-adapter.md  adr-0017-production-macos-account-store.md  adr-0018-bounded-sync-and-cache.md  adr-0019-macos-key-provisioning-and-readonly-cli.md  adr-0020-macos-production-ui-toolkit.md  adr-0021-macos-ui-vertical-slice.md  adr-0022-performance-primary-constraint.md  adr-0023-step3-oauth-and-bounded-sync.md  dependency-rules.md
docs/governance/: dco-attestations.md  language-policy.md
docs/m0/: blob-feasibility.md  dioxus-device-evidence.md  dioxus-ui-feasibility.md  gate-register.json  macos-phase-1-acceptance-protocol.md  (+7 more)
fuzz/: Cargo.toml  deny.toml  rust-toolchain.toml
fuzz/corpus/mime_display/: active-html-unsafe-urls.eml  attachment-exclusion.eml  base64-edges.eml  cid-placeholders.eml  folded-duplicate-headers.eml  input-limit-at-64.eml  input-limit-over-64.eml  multipart-boundaries.eml  nested-multipart.eml  quoted-printable-edges.eml  unsupported-charset.eml
fuzz/fuzz_targets/: mime_display.rs
patches/: dioxus-desktop-0.7.9-tersa-m0.patch  dioxus-desktop-0.7.9.lock-checksum
scripts/: verify-m0-gates.py  verify-mime-fuzz.sh  write-evidence-manifest.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+4 files in other folders)
