[workspace]
members = [
    "apps/dioxus-spike",
    "apps/slint-spike",
    "apple/rust-bridge",
    "crates/application",
    "crates/domain",
    "crates/platform",
    "crates/presentation",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91.1"
license = "MPL-2.0"
repository = "https://github.com/matteoscurati/tersa.app"
authors = ["tersa.app contributors"]

[workspace.dependencies]
cargo_metadata = "0.23.1"
dioxus = { version = "=0.7.9", default-features = false, features = ["hooks", "html", "macro", "signals"] }
dioxus-desktop = { version = "=0.7.9", default-features = false, features = ["tokio_runtime"] }
dioxus-document = { version = "=0.7.9", default-features = false }
tersa-presentation = { path = "crates/presentation", version = "=0.0.0" }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
exit = "warn"
impl_trait_in_params = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
multiple_inherent_impl = "warn"
rc_buffer = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
tests_outside_test_module = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unwrap_used = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
