[package]
name = "xtask"
description = "Repository automation for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
cargo_metadata.workspace = true
plist.workspace = true
serde = { version = "=1.0.228", default-features = false, features = ["std"] }
yaml_serde.workspace = true

[lints]
workspace = true
