[package]
name = "tersa-gmail-rest-macos"
description = "macOS-only read-only Gmail REST mailbox adapter and OAuth token transport for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tersa-application = { workspace = true }
tersa-domain = { path = "../../crates/domain", version = "=0.0.0" }
url.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
reqwest.workspace = true

[lints]
workspace = true
