# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "tersa-keychain-macos"
description = "macOS Data Protection Keychain and fixed App Group adapter for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
hkdf = { workspace = true }
sha2 = "=0.10.9"
tersa-platform = { path = "../../crates/platform", version = "=0.0.0" }
zeroize = { version = "=1.9.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true, default-features = false }
objc2-foundation = { workspace = true }
security-framework-sys = { workspace = true }

[lints]
workspace = true
