[package]
name = "tersa-apple-bridge"
description = "Static Rust bridge linked by the minimal Apple bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
tersa-application.workspace = true
tersa-presentation.workspace = true
url.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
tersa-keychain-macos = { path = "../../adapters/keychain-macos", version = "=0.0.0" }

[lints]
workspace = true
