# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "tersa-blob-spike"
description = "Portable diagnostic for crash-safe chunked AEAD blob storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "tersa-blob-spike"
path = "src/main.rs"

[dependencies]
chacha20poly1305.workspace = true
getrandom = { workspace = true, features = ["std"] }
hmac.workspace = true
rustix.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true

[lints]
workspace = true
