# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "tersa-mime-spike"
description = "Portable diagnostic MIME and HTML safety feasibility executable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "tersa-mime-spike"
path = "src/main.rs"

[dependencies]
ammonia = "=4.1.4"
mail-parser = "=0.11.5"

[lints]
workspace = true
