[package]
name = "tersa-application"
description = "Platform-independent application use cases for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
base64.workspace = true
getrandom.workspace = true
sha2.workspace = true
subtle.workspace = true
tersa-domain = { path = "../domain", version = "=0.0.0" }
url.workspace = true
zeroize.workspace = true

[lints]
workspace = true
