[package]
name = "tersa-application"
description = "Platform-independent application use cases for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
base64.workspace = true
getrandom.workspace = true
sha2.workspace = true
subtle.workspace = true
tersa-domain = { path = "../domain", version = "=0.0.0" }
url.workspace = true
zeroize.workspace = true

[features]
# Exposes test-only constructors (e.g. AccountSubject::from_raw_for_test) to
# tests in OTHER workspace crates. Never enabled by a production dependency.
test-util = []

[lints]
workspace = true
