[package]
name = "tersa-platform"
description = "Operating-system capability ports for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
tersa-domain = { path = "../domain", version = "=0.0.0" }

[lints]
workspace = true
