[package]
name = "tersa-presentation"
description = "UI-neutral presentation models for tersa.app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
tersa-application = { path = "../application", version = "=0.0.0" }
tersa-domain = { path = "../domain", version = "=0.0.0" }

[lints]
workspace = true
